<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome">Welcome!</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginStayLoggedIn">Stay logged in?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="loginMsg">Please log in or register</string>
    <string name="registerMsg">Please register for an account</string>
    <string name="registerFName">First name</string>
    <string name="registerLName">Last name</string>
    <string name="nickname">Username (used for in app display)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="RedArmodillo_Chat">Red Armodillo Chat</string>
    <string name="title_activity_home_nav">HomeNavActivity</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_activity_setting_menu">SettingMenuActivity</string>
    <string name="chat_recent">Recent</string>
    <string name="chat_invitation">Invitation</string>
    <string name="token">token</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="notification_add_to_cart_button">Like</string>
    <string name="group_name">Group 1</string>
    <string name="notifications_admin_channel_name">Global channel</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>
    <string name="channel_name">general channel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
